<resources>
    <string name="app_name">Levit</string>

    <!-- Gerais -->
    <string name="return_txt">←</string>
    <string name="return_txt_desc">Voltar</string>
    <string name="logo_desc">Levit</string>
    <string name="password_field_title">Senha</string>
    <string name="email_field_example">gabriel@empresa.com</string>

    <!-- Cadastro -->
    <string name="cadastro_title">Criar a sua conta</string>
    <string name="cadastro_desc">Comece a organizar a sua empresa hoje.</string>
    <string name="cadastro_name_field_title">Nome completo</string>
    <string name="cadastro_name_field_example">Gabriel Lene</string>
    <string name="cadastro_email_field_title">E-mail corporativo</string>
    <string name="cadastro_cpfcnpj_field_title">CPF ou CNPJ</string>
    <string name="cadastro_cpfcnpj_field_example">XXX.XXX.XXX-XX | XX.XXX.XXX/XXXX-XX</string>
    <string name="cadastro_password_field_example">Crie uma palavra-passe forte</string>
    <string name="cadastro_cpassword_field_title">Confirmar palavra-passe</string>
    <string name="cadastro_cpassword_field_example">Repita a palavra-passe</string>
    <string name="cadastro_button_title">Criar conta gratuita</string>
    <string name="cadastro_login_txt1">Já tem conta?</string>
    <string name="cadastro_login_txt2">Faça login</string>

    <!-- Login -->
    <string name="login_title">Bem-vindo de volta</string>
    <string name="login_desc">Acesse sua conta para gerir os seus módulos</string>
    <string name="login_email_field_title">E-mail</string>
    <string name="login_redefenirsenha_txt1">Esqueceu a senha?</string>
    <string name="login_redefenirsenha_txt2">Redefinir</string>
    <string name="login_button_title">Entrar</string>
    <string name="login_registre_txt1">Não possui conta?</string>
    <string name="login_registre_txt2">Registre-se</string>

    <!-- Home -->
    <string name="main_title1">Organize seu negócio,</string>
    <string name="main_title2">dobre seu lucro.</string>

    <!-- Recuperar Conta -->
    <string name="red_conta_title">Redefinir Senha</string>
    <string name="red_conta_desc">Será enviado um e-mail com link de redefinição</string>
    <string name="red_conta_button_title">Enviar</string>

</resources>